[package]
name = "wooclock"
version = "0.8.0"
edition = "2021"
authors = ["rdkang"]
homepage = "wooclock.rdkang.xyz"
description = "a timer and stopwatch that controlled by cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = { version = "4", features = ["derive"] }
notify-rust = "4.6"
rofi = "0.3.0"
opener = "0.5.0"
rand = "0.8.0"
